--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,16 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.thymeleaf.cache = false
 spring.thymeleaf.prefix = file:src/main/resources/templates/
-spring.web.resources.static-locations=[classpath:META-INF/resources/, file:src/main/resources/, file:src/main/resources/static/, file:src/main/resources/static/assets/, classpath:/public/]
+spring.web.resources.static-locations=[classpath:META-INF/resources/, file:src/main/resources/, file:src/main/resources/static/, file:src/main/resources/static/assets/, classpath:/public/,file:node_modules ]
 spring.web.resources.cache.period=0
 # DDL generation
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
+#uploadfile
+application.uploader.cloud-name=dqn4yyxk5
+application.uploader.api-key=561553916498542
+application.uploader.api-secret=vACzgW8FIeSANS7A6oiFbz5GOas
 
-
-
+spring.servlet.multipart.max-file-size=1500KB
+spring.servlet.multipart.max-request-size=2500KB
